fix style of variables table
computed values had scrollbars, and table didn't fill the width of the area

--- a/editor/static/css/editor.css
+++ b/editor/static/css/editor.css
@@ -74,18 +74,22 @@
 	background: #f5fff5;
 }
 
+.variables {
+	width: 100%;
+}
+
 .variables th {
 	text-align: center;
 }
 
 .variable .name {
-    width: 8em;
+	width: 8em;
 }
 
 .variable .def {
-	width: 20em;
     font-family: monospace;
 	text-align: right;
+	width: 30em;
 }
 
 .variable.ui-sortable-helper {
@@ -113,6 +117,7 @@
 	overflow-x: auto;
     max-height: 8em;
     overflow-y: auto;
+	padding: 2px;
 }
 
 .function .parameters .list {
